# DELIAH

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: android-build.yml  backend-test.yml  deploy-pages.yml  windows-build.yml
apps/android/: pubspec.yaml
apps/android/android/: build.gradle  settings.gradle
apps/android/android/app/: build.gradle
apps/android/android/app/src/main/: AndroidManifest.xml
apps/android/android/app/src/main/kotlin/com/deliah/app/: MainActivity.kt
apps/android/lib/: main.dart
apps/android/lib/screens/: chat_screen.dart  settings_screen.dart
apps/android/lib/services/: api_service.dart
apps/android/test/: widget_test.dart
apps/windows/: index.html  package.json
apps/windows/src/: App.css  App.tsx
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
backend/: __init__.py  requirements.txt
backend/api/: main.py
backend/core/: __init__.py  ai_engine.py  model_router.py  task_manager.py
backend/memory/: memory_manager.py
backend/personality/: __init__.py  behavior.py  mood.py  personality.json  traits.py
backend/voice/: __init__.py  pipeline.py
backend/voice/stt/: engine.py
backend/voice/tts/: engine.py
backend/voice/wake_word/: detector.py
docs/: CONTRIBUTING.md  index.html
models/: llm_config.json
plugins/: __init__.py  plugin_manager.py
