[package]
name = "deliah-desktop"
version = "0.1.0"
description = "DELIAH - Digital Enhanced Local Intelligence Assistant Hub"
authors = ["gelliello"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
